got the text aligned and slightly less ugly. maybe use highlighting instead of buttons and right click to copy the original text. also put back in original styling. this is a good stopping point to merge to master!

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,17 @@
     transform: rotate(360deg);
   }
 }
+
+.MuiToggleButton-sizeSmall {
+}
+
+.article {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+.wordbutton {
+}
